blog y texto en tabla

--- a/tablaDeTipos.html
+++ b/tablaDeTipos.html
@@ -2,9 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <title>Tabla de tipos</title>
     </head>
     <body>
         <h1>Tabla de tipos</h1>
+        <p>A continuación se datalla la tabla de tipos de Pokémon</p>
         
         <table>
             <tr>
@@ -84,7 +86,16 @@
             </tr>
         </table>
         <section>
-            <h2>Leyenda</h2>
+            <h2>Como leer:</h2>
+            <p>La columna de la izquierda muestra el tipo del movimiento. La primera fila muestra el tipo del pokémon enemigo.
+                Para saber el multiplicador de daño, se mira la fila del tipo del movimiento, y el porcentaje debajo de la columna del tipo/tipos del pokemon enemigo son el multiplicador de daño.
+                En caso de que tenga dos tipos, los multiplicadores de ambos tipos se multiplican uno con otro para obtener el número final
+            </p>
+            <p>Ejemplos:</p>
+            <ul>
+                <li>Se usa un movimiento de tipo tierra sobre un pokemon de tipo eléctrico/acero, por lo que el multiplicador de daño es x4</li>
+                <li>Se usa un movimiento de tipo hada sobre un pokémon de tipo dragón/acero, por lo que el multiplicador de daño se transofrma en x1</li>
+            </ul>
             <ul>
                 <li>x1: Daño neutro</li>
                 <li>x2: Daño superefectivo</li>
