--- a/html/listPokemon.html
+++ b/html/listPokemon.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="readPokemon.js"></script>
+        <script src="../js/readPokemon.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     </head>
     <body>
