Mapa de zonas y cambio de ventanas

--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,14 @@
     </head>
     <body>
         <h1>Pokédex GO</h1>
+        <nav>
+            <a href="/html/index.html" accesskey="I" tabindex=0>Inicio</a>
+            <a href="/html/tablaDeTipos.html" accesskey="T" tabindex=0>Tabla de tipos</a>
+            <a href="/html/mapaRegiones.html" accesskey="M" tabindex=0>Mapa de regiones</a>
+            <a href="/html/login.php" accesskey="L" tabindex=0>Inicio de sesión</a>
+            <a href="/html/registro.php" accesskey="R" tabindex=0>Registrarse</a>
+            
+         </nav>
         <p>¡Bienvenido a Pokédex GO! En esta página podrás ver los pokémon que la aplicación de Pokémon GO.</p>
         <p></p>
         <h2>¿Qué es Pokémon GO?</h2>
