--- a/html/tablaDeTipos.html
+++ b/html/tablaDeTipos.html
@@ -6,6 +6,14 @@
     </head>
     <body>
         <h1>Tabla de tipos</h1>
+        <nav>
+            <a href="/html/index.html" accesskey="I" tabindex=0>Inicio</a>
+            <a href="/html/tablaDeTipos.html" accesskey="T" tabindex=0>Tabla de tipos</a>
+            <a href="/html/mapaRegiones.html" accesskey="M" tabindex=0>Mapa de regiones</a>
+            <a href="/html/login.php" accesskey="L" tabindex=0>Inicio de sesión</a>
+            <a href="/html/registro.php" accesskey="R" tabindex=0>Registrarse</a>
+            
+         </nav>
         <p>A continuación se datalla la tabla de tipos de Pokémon</p>
         
         <table>
