--- a/html/mapaRegiones.html
+++ b/html/mapaRegiones.html
@@ -2,6 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
+        <title>Mapa de regiones</title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <link rel="stylesheet" href="../css/map.css"/>
         <script src="../js/map.js"></script>
